--- a/extra_files/vamshopru/index.html
+++ b/extra_files/vamshopru/index.html
@@ -146,7 +146,7 @@
 				<hr>
 				<p>Оцените современный дизайн, простоту и удобство. Предоставьте Вашим покупателям возможность просмотра и заказа товаров с любого типа устройств! Ваш интернет-магазин будет одинаково хорошо выглядеть на любых пользовательских устройствах, будь то настольный компьютер, ноутбук, планшет, смартфон.
 				</p>
-				<p class="text-center"><a href="http://demo.vamshop.com" target="_blank" class="btn btn-large btn-info btn-block " title="Смотреть демо-версию"><i class="fa-icon-shopping-cart"></i> СМОТРЕТЬ ДЕМО-ВЕРСИЮ</a>
+				<p class="text-center"><a href="http://demo2.vamshop.ru" target="_blank" class="btn btn-large btn-info btn-block " title="Смотреть демо-версию"><i class="fa-icon-shopping-cart"></i> СМОТРЕТЬ ДЕМО-ВЕРСИЮ</a>
 				</p>
 				
 				</div>
@@ -445,7 +445,7 @@
 				</div>
 				
 				<div class="span3 text-center">
-					<a class="btn btn-large btn-info" href="http://demo.vamshop.com" target="_blank" title="Смотреть демо-версию"><i class="fa-icon-play-circle"></i> Смотреть демо-версию</a>
+					<a class="btn btn-large btn-info" href="http://demo2.vamshop.ru" target="_blank" title="Смотреть демо-версию"><i class="fa-icon-play-circle"></i> Смотреть демо-версию</a>
 				</div>
 			</div><!--/ROW-->
 		</div>
