--- a/extra_files/vamshopcom/index.html
+++ b/extra_files/vamshopcom/index.html
@@ -452,7 +452,7 @@
 		<div class="row-fluid panel">
 			<div class="span12 text-center">
 				<span>VamShop Download
-				<span class="inner">Download free trial version
+				<span class="inner">Download free trial version, free for 14 days.
 				</span>
 				</span>
 			</div>
